styles/prototype.css
/* ... */
#prototype .option_wrapper_missions .chapter_select_5 .chapter_link {
    width: 18.1%;
}
body.windowFlag_landscapeMode #prototype .option_wrapper_missions .chapter_select_5 .chapter_link,
body.mobileFlag_landscapeMode #prototype .option_wrapper_missions .chapter_select_5 .chapter_link {
    width: 18.45%;
}
#prototype .option_wrapper_missions .chapter_select_6 .chapter_link {
    width: 14.7%;
}
body.windowFlag_landscapeMode #prototype .option_wrapper_missions .chapter_select_6 .chapter_link,
body.mobileFlag_landscapeMode #prototype .option_wrapper_missions .chapter_select_6 .chapter_link {
    width: 15.1%;
}

#prototype .option_wrapper_missions .chapter_select .chapter_link:hover,
#prototype .option_wrapper_missions .chapter_select .chapter_link_active {
    text-decoration: underline;
    border-color: #373737;
    background-color: #2F2F2F;
    color: #FFFFFF;
}
#prototype .option_wrapper_missions .chapter_select .chapter_link_disabled,
#prototype .option_wrapper_missions .chapter_select .chapter_link_disabled:hover {
    text-decoration: none;
    border-color: #252525;
    color: #494343;
    cursor: default;
}
#prototype .option_wrapper_missions .hidden_chapter_option {
    display: none !important;
}
#prototype .option_wrapper_robots {

}
#prototype .option {
    display: block;
    float: left;
    height: 65px;
    width: 748px;
    margin: 0 0 3px 0;
    vertical-align: top;
    border: 2px solid #1A1A1A;
    border-color: #1A1A1A !important;
    font-size: 10px;
    line-height: 65px;
    letter-spacing: 2px;
    /*text-transform: uppercase;*/
    text-decoration: none;
    padding: 0;
    border-radius: 0.75em;
    -moz-border-radius: 0.75em;
    -webkit-border-radius: 0.75em;
    cursor: pointer;
    _cursor: hand;
    color: #FFFFFF;
    background-position: center top;
    background-color: rgb(65,65,65);
    background-image: -webkit-gradient(
            linear,
            left bottom,
            left top,
            color-stop(0.15, rgb(65,65,65)),
            color-stop(0.75, rgb(71,71,71))
    );
    background-image: -moz-linear-gradient(
            center bottom,
            rgb(65,65,65) 15%,
            rgb(71,71,71) 75%
    );
    text-shadow: 1px 1px 4px #333333;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
}
#prototype .option_message {
    margin-top: 10px;
    background-color: transparent;
    background-image: none;
    border-color: transparent !important;
    box-shadow: 0 0 0 transparent;
    height: 58px !important;
    line-height: 58px !important;
}
#prototype .option_message:first-child {
    margin-top: 0 !important;
}
#prototype .option_message,
#prototype .option_message * {
    /*cursor: default !important;*/
}

/*
#prototype .option_message_collapsed {
    margin-top: 5px;
    opacity: 0.75;
    filter: opacity(alpha = 75);
}
#prototype .option_message_collapsed:hover {
    opacity: 1.00;
    filter: opacity(alpha = 100);
}
#prototype .option_message_collapsed,
#prototype .option_message_collapsed .chrome,
#prototype .option_message_collapsed .inset  {
    height: 22px !important;
}
#prototype .option_message_collapsed .sprite,
#prototype .option_message_collapsed .subtext,
#prototype .option_message_collapsed .subtext2 {
    display: none !important;
}
*/


/* -- HIDE ALL STORY RELATED TEXT -- */

#prototype .option_message {
    margin-top: 6px;
    margin-bottom: 8px;
    opacity: 1.00;
    filter: opacity(alpha = 100);
}
#prototype .option_message,
#prototype .option_message * {
    cursor: default !important;
}
#prototype .option_message,
#prototype .option_message .chrome,
#prototype .option_message .inset  {
    height: 22px !important;
}
#prototype .option_message .sprite,
#prototype .option_message .subtext,
#prototype .option_message .subtext2 {
    display: none !important;
}


#prototype .option:hover {
    color: #FFFFFF;
}
#prototype .option_disabled {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
}
#prototype .option_disabled:hover {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
}
#prototype .option_wrapper_default .option_complete,
#prototype .option_wrapper_complete .option_complete {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
    opacity: 0.45;
}
#prototype .option_wrapper_default .option_complete:hover,
#prototype .option_wrapper_complete .option_complete:hover {
    opacity: 0.75;
}
#prototype .option_wrapper_complete .option_complete {
    opacity: 0.75;
}
#prototype .option_wrapper_complete .option_complete:hover {
    opacity: 1.00;
}

#prototype .option_disabled {
    opacity: 0.2;
    cursor: default;
}
#prototype .option_hidden {
    display: none;
}

#prototype .option_back {
    height: 47px;
    line-height: 20px;
    border-color: #1A1A1A;
    background-color: #262626;
    background-image: none;
    color: #CACACA;
    position: absolute;
    bottom: 0;
    left: 8px;
    z-index: 20;
}
#prototype .option_back:hover {
    background-color: #292929;
}
#prototype .option_this-team-select {
    position: absolute;
    bottom: 54px;
    left: 8px;
}
#prototype .option_this-team-select .chrome label {
    width: 100px !important;
    margin-left: 460px !important;
    padding-left: 0 !important;
}
body.windowFlag_landscapeMode #prototype .option_this-team-select .chrome label,
body.mobileFlag_landscapeMode #prototype .option_this-team-select .chrome label {
    margin-left: 560px !important;
}
/* ... */

